--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *" # chạy mỗi ngày
+    - cron: "0 0 * * *" # chạy hàng ngày
   workflow_dispatch:
 
 jobs:
