--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,22 +1,24 @@
 name: Generate Snake
 
 on:
-  schedule:
-    - cron: "0 0 * * *" # chạy hàng ngày
   workflow_dispatch:
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@v3
+      - name: Checkout repo content
+        uses: actions/checkout@v2
+
+      - name: Generate the snake animation
+        uses: Platane/snk@v3
         with:
           github_user_name: PhungDinhQuangAnh
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-      - name: Push to the output branch
-        uses: crazy-max/ghaction-github-pages@v4
+
+      - name: Push the animation to the output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
