--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,10 +1,9 @@
 name: 🐍 Generate Snake Animation
 
 on:
-  # Bấm thủ công để tạo ảnh snake mới
   workflow_dispatch:
   
-  # Tự động chạy mỗi ngày lúc 6h sáng
+  # Run at 6am every day
   schedule:
     - cron: "0 6 * * *"
 
@@ -24,7 +23,8 @@ jobs:
           color_snake: '#58A6FF'
           color_dots: '#d1d5da,#0d1117,#58A6FF,#1f6feb,#ffffff'
           background_color: transparent
-
+          mode: overtaking
+          
       - name: 🚀 Deploy to output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
