--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,7 +22,7 @@ jobs:
             dist/github-contribution-grid-snake.svg
           color_snake: '#58A6FF'
           color_dots: '#d1d5da,#0d1117,#58A6FF,#1f6feb,#ffffff'
-          background_color: '#0d1117'
+          background_color: transparent
           mode: overtaking
           
       - name: 🚀 Deploy to output branch
