--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -20,9 +20,9 @@ jobs:
           github_user_name: PhungDinhQuangAnh
           outputs: |
             dist/github-contribution-grid-snake.svg
-          color_snake: '#0057b8'
-          color_dots: '#c6e9ff,#90caff,#60aaff,#2a8bff,#006eff'
-          background_color: '#f8f9fa'
+          color_snake: '#2e7d32'
+          color_dots: '#a5d6a7,#81c784,#66bb6a,#4caf50,#388e3c'
+          background_color: '#e8f5e9'
           mode: overtaking
           
       - name: 🚀 Deploy to output branch
