--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -14,6 +14,9 @@ jobs:
       - name: 🧾 Checkout repository
         uses: actions/checkout@v3
 
+      - name: 🧹 Remove old build
+        run: rm -rf dist
+
       - name: 🐍 Generate snake.svg
         uses: Platane/snk@v3
         with:
